--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,23 @@
 
 .search_bar {
   flex-direction: row;
+  padding-top: 10px;
+}
+
+.user-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(194, 224, 250);
+  margin-bottom: 2px;
+  padding: 5px;
+}
+
+.message {
+  margin: 5px;
+  padding: 5px;
+  min-height: 20px;
+  background-color: rgb(68, 67, 67);
+  color:rgb(243, 248, 252)
 }
